fix overflows

--- a/src/index.css
+++ b/src/index.css
@@ -265,6 +265,7 @@ body {
       }
       .repo_info {
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
         margin-top: 14px;
@@ -500,6 +501,7 @@ body {
         .userCard {
           box-shadow: 0px 0px 2px rgba(204, 204, 204, 0.8);
           padding: 1rem;
+          max-width: 273px;
           &:hover {
             background-color: #cccccc0f;
           }
@@ -516,6 +518,9 @@ body {
             span {
               font-size: 24px;
               color: #e6edf3;
+              text-overflow: ellipsis;
+              white-space: nowrap;
+              overflow: hidden;
             }
           }
         }
@@ -525,6 +530,9 @@ body {
 }
 
 @media screen and (max-width: 560px) {
+  .trending {
+    padding: 0 1rem;
+  }
   .filtering {
     label {
       width: 100%;
@@ -573,9 +581,7 @@ body {
     .repoBox {
       .repo_info {
         .repo-timeAgo {
-          position: absolute;
-          top: 0;
-          right: 0;
+          margin-top: 10px;
         }
       }
     }
